# curator-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/backend/: README.md  pyproject.toml
apps/backend/src/: main.py
apps/backend/tests/: test_confluence_incremental_sync.py  test_llm_client_error_handling.py  test_rate_limiter.py
apps/desktop/: electron-builder.yml  electron.vite.config.ts  package.json
apps/desktop/e2e/: smoke.spec.ts
apps/desktop/src/: App.tsx
apps/desktop/src/__tests__/: chat-rendering.test.tsx  connection-failure-ui.test.tsx  settings-persistence.test.ts
apps/desktop/src/main/: index.ts  settingsStore.ts
apps/desktop/src/preload/: index.d.ts  index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.tsx  main.tsx
apps/desktop/src/renderer/src/assets/: main.css
apps/desktop/src/renderer/src/routes/: AppRoutes.tsx  ChatPage.tsx
apps/desktop/src/renderer/src/types/: settings.ts
apps/desktop/src/routes/: ChatPage.tsx  SettingsPage.tsx
apps/desktop/src/types/: preload.d.ts
claude/: README.md  architecture.md
docs/: agent-collaboration.md  agents.md  architecture.md  human-release-notes.md  operations.md
